improve web interface

--- a/html/index.html
+++ b/html/index.html
@@ -200,8 +200,11 @@
 									<label><span class="infoBlockTitleText">Adjust Playback Speed</span></label>
 									<input id="playback_speed" name="Speed" type="text" class="altitudeFilterInput" maxlength="5">
 									<button type="submit">Adjust!</button>
-									<button id="jump_hour">Jump forward 1h</button>
 								</form>
+								<button id="pb_slower">Slower</button>
+								<button id="pb_faster">Faster</button>
+								<button id="back_hour">Jump backward 1h</button>
+								<button id="jump_hour">Jump forward 1h</button>
 			
 								<form id="altitude_filter_form">
 									<label><span class="infoBlockTitleText">Filter by Altitude:</span></label>
