Fix some errors

--- a/html/index.html
+++ b/html/index.html
@@ -265,7 +265,7 @@
 								<tbody>
 									<tr id="plane_row_template" class="plane_table_row hidden">
 										<td class="icaoCodeColumn">ICAO</td>
-										<td><img style="width: 20px; height=12px" src="about:blank" alt="Flag"></td>
+										<td><img style="width: 20px; height=12px" src="" alt="Flag"></td>
 										<td>FLIGHT</td>
 										<td>REGISTRATION</td>
 										<td>AIRCRAFT_TYPE</td>
