--- a/html/index.html
+++ b/html/index.html
@@ -210,6 +210,7 @@
 							<button id="pb_10">10x</button>
 							<button id="pb_20">20x</button>
 							<button id="pb_40">40x</button>
+							<button id="pb_80">80x</button>
 						</div>
 						<div id="dump1090_controlblock">
 							<span>Jump:</span>
