time display stuff

--- a/html/index.html
+++ b/html/index.html
@@ -213,11 +213,13 @@
 							<button id="pb_80">80x</button>
 						</div>
 						<div id="dump1090_controlblock">
-							<span>Jump:</span>
+							<span class="infoBlockTitleText">Jump: </span>
 							<button id="back_10">&lt; 10min</button>
 							<button id="jump_10">&gt; 10min</button>
 							<button id="back_hour">&lt;&lt; 1h</button>
 							<button id="jump_hour">&gt;&gt; 1h</button>
+							<span class="infoBlockTitleText">Clock: </span>
+							<span class="infoBlockTitleText" id="time_div">n/a</span>
 						</div>
 						<div id="dump1090_controlblock">
 							<button id="jump_0">Start</button>
