--- a/html/index.html
+++ b/html/index.html
@@ -179,7 +179,7 @@
 										<div class="button buttonTable" id="show_map_button"><span class="buttonText">Show Map</span></div>
 									</td>
 									<td style="text-align: right">
-										<a href="https://github.com/flightaware/dump1090" id="dump1090_version" target="_blank"></a>
+										<a href="https://github.com/wiedehopf/timelapse1090#timelapse1090" id="dump1090_version" target="_blank">timelapse1090 on github</a>
 									</td>
 								</tr>
 
